--- a/FrontEnd/Vaishnavi/AgrogetApplication/RegisterAsRenter.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/RegisterAsRenter.html
@@ -76,6 +76,7 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-12">
           <h2>Registration</h2>
+
          
         </div>
       </div>
@@ -129,6 +130,17 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="col-lg-4">
                     <fieldset>
                       <input name="Password" type="text" id="password" placeholder="Password" required="">
+                    </fieldset>
+                  </div>
+
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="ShopDetails" type="text" id="shop" placeholder="Shop Detail" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="Shop_Image_Id" type="text" id="lname" placeholder="Shop Id" required="">
                     </fieldset>
                   </div>
 
