--- a/FrontEnd/Vaishnavi/AgrogetApplication/index.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/index.html
@@ -52,8 +52,8 @@ https://templatemo.com/tm-569-edu-meeting
                           <li class="has-sub">
                               <a href="javascript:void(0)">Registration</a>
                               <ul class="sub-menu">
-                                  <li><a href="Registration.html">As Farmer</a></li>
-                                  <li><a href="meeting-details.html">As Renter</a></li>
+                                  <li><a href="FarmerRegistration.html">As Farmer</a></li>
+                                  <li><a href="RenterRegistration.html">As Renter</a></li>
                               </ul>
                           </li>
                           <li class="scroll-to-section"><a href="Feedback.html">About Us</a></li>
@@ -85,13 +85,14 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="col-lg-12">
                 <div class="caption">
               <h2>Welcome to AgroGet</h2>
-              <p>Agroget Helps Renter to List there Equipment. Allow Various farmer to Rent the Equipment on Daily/Hourly Basics.</p>
-   
+              <p>AgroGet is a web application. The main objective of the AgroGet is to provide a service for farmers to take equipment on rent from different renters and Provide Renter the functionality to list their equipment for rent and track their equipment which are rented.</p>
           </div>
               </div>
             </div>
           </div>
-           <section class="services">
+
+<!--Container Section-->
+  <section class="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -99,7 +100,7 @@ https://templatemo.com/tm-569-edu-meeting
           
             <div class="item">
               <div class="icon">
-                <img src="assets/images/sow.png" alt="">
+                <img src="assets/images/tractor.png" alt="">
               </div>
               <div class="down-content">
                 <h4>Harvesting Equipment</h4>
@@ -109,10 +110,10 @@ https://templatemo.com/tm-569-edu-meeting
             
             <div class="item">
               <div class="icon">
-                <img src="assets/images/service-icon-02.png" alt="">
+                <img src="assets/images/bird.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Teachers</h4>
+                <h4>Planting Equipment</h4>
                 <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
               </div>
             </div>
@@ -122,7 +123,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <img src="assets/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Students</h4>
+                <h4>Seeding Equipment</h4>
                 <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
               </div>
             </div>
@@ -132,7 +133,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <img src="assets/images/tractor.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Online Meeting</h4>
+                <h4>Tillage Equipment</h4>
                 <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
               </div>
             </div>
@@ -142,7 +143,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <img src="assets/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Networking</h4>
+                <h4>Cuttlers and Shredders</h4>
                 <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
               </div>
             </div>
@@ -152,9 +153,16 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
   </section>
-      </div>
+  
+  <!--End Of Container-->
+ 
+  <section class="meetings-page" id="meetings">
+    <div class="footer">
+      <p>Copyright © 2022 AgroGet Co., Ltd. All Rights Reserved. 
+          <br>Design: <a href="https://templatemo.com/page/1" target="_parent" title="website templates">AgroGet</a></p>
+    </div>
   </section>
-  <!-- ***** Main Banner Area End ***** -->
+   ***** Main Banner Area End ***** -->
 
  
 
