--- a/FrontEnd/Vaishnavi/AgrogetApplication/RenterRegistration.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/RenterRegistration.html
@@ -54,9 +54,9 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="RenterRegistration.html">As Renter</a></li>
                               </ul>
                           </li>
-                          <li><a href="index.html">About Us</a></li> 
+                          <li><a href="Aboutus.html">About Us</a></li> 
                           <li><a href="index.html">Feedback</a></li> 
-                          <li><a href="index.html">Contact Us</a></li> 
+                          <li><a href="contact.html">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
@@ -114,7 +114,7 @@ https://templatemo.com/tm-569-edu-meeting
                   
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="Password" type="text" id="password" placeholder="Password" required="">
+                      <input name="Password" type="password" id="password" placeholder="Password" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
