index page updated

--- a/FrontEnd/Vaishnavi/AgrogetApplication/Harvestingproductinfo.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/Harvestingproductinfo.html
@@ -57,7 +57,7 @@
             into the feeder house. Draper headers are an alternative to
             auger-style headers.
           </p>
-          <a href="#" class="btn btn-success btn">Rent</a>
+          <a href="FarmerRegistration.html" class="btn btn-success btn">Rent</a>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
             into the feeder house. Draper headers are an alternative to
             auger-style headers.
           </p>
-          <a href="#" class="btn btn-success btn">Rent</a>
+          <a href="FarmerRegistration.html" class="btn btn-success btn">Rent</a>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           <h5 class="card-title">Garlic Harvester</h5>
           <p class="card-text">
             Garlic harvesting is a very time consuming and requires labour of about 30 man-days/ha. Farmers go for single pass of duck foot cultivator for loosening of garlic bulbs from soil and bulbs are collected manually. A tractor operated garlic harvester was developed at Udaipur. </p>
-          <a href="#" class="btn btn-success btn">Rent</a>
+          <a href="FarmerRegistration.html" class="btn btn-success btn">Rent</a>
         </div>
       </div>
 
@@ -104,7 +104,7 @@
           <h5 class="card-title">Groundnut Digger</h5>
           <p class="card-text">
             A tractor operated groundnut digger cum elevator was developed at PAU, Ludhiana. The machine is operated by tractors above 26 kW. It consists of a digging blade of 1200 mm, elevator-cum-pick up reel, fenders, gauge wheel, coulters and power transmission system.  </p>
-         <a href="#" class="btn btn-success btn">Rent</a>
+         <a href="FarmerRegistration.html" class="btn btn-success btn">Rent</a>
         </div>
       </div>
     </div>
