--- a/FrontEnd/Vaishnavi/AgrogetApplication/FarmerRegistration.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/FarmerRegistration.html
@@ -155,7 +155,7 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
           </div>
         </div>
-
+      </div>
   
       
         <section class="meetings-page" id="meetings">
