Seeding Equipment Added/

--- a/FrontEnd/Vaishnavi/AgrogetApplication/index.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/index.html
@@ -118,7 +118,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Seeding Equipment</h4>
-                <a href="Harvestingproductinfo.html" class="btn1 btn-success btn1">View</a>
+                <a href="seeding.html" class="btn1 btn-success btn1">View</a>
               </div>
             </div>
             
@@ -128,7 +128,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Planting Equipment</h4>
-                <a href="Harvestingproductinfo.html" class="btn1 btn-success btn1">View</a>
+                <a href="seeding.html" class="btn1 btn-success btn1">View</a>
               </div>
             </div>
             
