Pages Integration done

--- a/FrontEnd/Vaishnavi/AgrogetApplication/Harvestingproductinfo.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/Harvestingproductinfo.html
@@ -32,6 +32,7 @@
             </div>
           </div>
         </div>
+        <a href="index.html" style="margin-left: -810px;" target="_blank">Back</a>
       </section>
     </section>
     <!-- <nav class="navbar navbar-light marginlower">
