--- a/FrontEnd/Vaishnavi/AgrogetApplication/RenterRegistration.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/RenterRegistration.html
@@ -46,16 +46,16 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li><a href="index.html">Home</a></li>
-                          <li><a href="FarmerRegistration.html" class="active">Login</a></li>
+                          <li><a href="FarmerRegistration.html" >Login</a></li>
                           <li class="has-sub">
                               <a href="javascript:void(0)">Registration</a>
                               <ul class="sub-menu">
                                   <li><a href="FarmerRegistration.html">As Farmer</a></li>
-                                  <li><a href="RenterRegistration.html">As Renter</a></li>
+                                  <li><a href="RenterRegistration.html" class="active">As Renter</a></li>
                               </ul>
                           </li>
                           <li><a href="Aboutus.html">About Us</a></li> 
-                          <li><a href="index.html">Feedback</a></li> 
+                          <li><a href="feedback.html">Feedback</a></li> 
                           <li><a href="contact.html">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
