--- a/FrontEnd/Vaishnavi/AgrogetApplication/seeding.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/seeding.html
@@ -28,10 +28,11 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-               <h2>&nbsp;&nbsp; Seeding Equipment</h2>
+               <h2>Seeding Equipment</h2>
               </div>
             </div>
           </div>
+          <a href="index.html" style="margin-left: -810px;" target="_blank">Back</a>
         </section>
       </section>
       <!-- <nav class="navbar navbar-light marginlower">
