--- a/FrontEnd/Laxman/Agroget_FrontEnd/ProfileEdit.html
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/ProfileEdit.html
@@ -67,6 +67,13 @@
                 <div id="sidebar" class="bg-purple">
                     <div class="h4 text-white">Account</div>
                     <ul>
+                      <li> <a href="ProfileSearch.html" class="text-decoration-none d-flex align-items-start">
+                        <div class="far fa-address-book pt-2 me-3"></div>
+                        <div class="d-flex flex-column">
+                            <div class="link">Search Equipment</div>
+                            <div class="link-desc">search and rent equipment</div>
+                        </div>
+                    </a> </li>
                         <li > <a href="Profile.html" class="text-decoration-none d-flex align-items-start">
                                 <div class="fas fa-box pt-2 me-3"></div>
                                 <div class="d-flex flex-column">
@@ -81,13 +88,7 @@
                                     <div class="link-desc">View & Manage Bookings </div>
                                 </div>
                             </a> </li>
-                        <li  > <a href="ProfileAddress.html" class="text-decoration-none d-flex align-items-start">
-                                <div class="far fa-address-book pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">Address Book</div>
-                                    <div class="link-desc">View & Manage Addresses</div>
-                                </div>
-                            </a> </li>
+                       
                         <li class="active"> <a href="ProfileEdit.html" class="text-decoration-none d-flex align-items-start">
                                 <div class="far fa-user pt-2 me-3"></div>
                                 <div class="d-flex flex-column">
