Logo and footer Updated

--- a/FrontEnd/Vaishnavi/AgrogetApplication/contact.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/contact.html
@@ -141,8 +141,8 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
+      <p>Copyright © 2022 AgroGet Co., Ltd. All Rights Reserved.
+        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">AgroGet</a>
       </p>
     </div>
   </section>
