--- a/FrontEnd/Vaishnavi/AgrogetApplication/index.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/index.html
@@ -158,7 +158,12 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
       
     </div>
-  
+    <section class="meetings-page" id="meetings">
+      <div class="footer">
+        <p>Copyright © 2022 AgroGet Co., Ltd. All Rights Reserved. 
+            <br>Design: <a href="https://templatemo.com/page/1" target="_parent" title="website templates">AgroGet</a></p>
+      </div>
+    </section>
 </section>
  
  
