--- a/FrontEnd/Vaishnavi/AgrogetApplication/Login.html
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/Login.html
@@ -142,8 +142,8 @@ https://templatemo.com/tm-569-edu-meeting
 
   <section class="meetings-page" id="meetings">
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com/page/1" target="_parent" title="website templates">TemplateMo</a></p>
+      <p>Copyright © 2022 AgroGet Co., Ltd. All Rights Reserved. 
+          <br>Design: <a href="https://templatemo.com/page/1" target="_parent" title="website templates">AgroGet</a></p>
     </div>
   </section>
 
