Created Dashboards for Renters and Farmers

--- a/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/ProfileSearch.html
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/ProfileSearch.html
@@ -8,7 +8,7 @@
     <title>Dashboard</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,19 +16,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
-    <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="../assets/css/main.css" rel="stylesheet" />
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/lightbox.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="assets/css/profile.css">
+    <link rel="stylesheet" href="../assets/css/profile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="javascript" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 </head>
@@ -41,24 +41,24 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">
-                            <img src="assets/images/logo.png" class="img">
+                        <a href="../index.html" class="logo">
+                            <img src="../assets/images/logo.png" class="img">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="FarmerRegistration.html" class="active">Login</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../Login.html" >Login</a></li>
                             <li class="has-sub">
                                 <a href="javascript:void(0)">Registration</a>
                                 <ul class="sub-menu">
-                                    <li><a href="FarmerRegistration.html">As Farmer</a></li>
-                                    <li><a href="RenterRegistration.html">As Renter</a></li>
+                                    <li><a href="../FarmerRegistration.html">As Farmer</a></li>
+                                    <li><a href="../RenterRegistration.html">As Renter</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Aboutus.html">About Us</a></li>
-                            <li><a href="index.html">Feedback</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="../Aboutus.html">About Us</a></li>
+                            <li><a href="../feedback.html">Feedback</a></li>
+                            <li><a href="../contact.html">Contact Us</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -202,7 +202,7 @@
                             </div>
                         </form>
                     </div>
-                    <script src="assets/js/choices.js"></script>
+                    <script src="../assets/js/choices.js"></script>
                     <script>
                         const choices = new Choices('[data-trigger]',
                             {
@@ -224,7 +224,7 @@
                                                 <div class="price">
                                                     <span>₹36.00</span>
                                                 </div>
-                                                <a href="meeting-details.html"><img src="assets/images/disc.jpg"
+                                                <a href="meeting-details.html"><img src="../assets/images/disc.jpg"
                                                         alt="New Lecturer Meeting"></a>
                                             </div>
                                             <div class="down-content">
@@ -250,7 +250,7 @@
                                                 <div class="price">
                                                     <span>₹36.00</span>
                                                 </div>
-                                                <a href="meeting-details.html"><img src="assets/images/disc.jpg"
+                                                <a href="meeting-details.html"><img src="../assets/images/disc.jpg"
                                                         alt="New Lecturer Meeting"></a>
                                             </div>
                                             <div class="down-content">
@@ -273,7 +273,7 @@
                                                 <div class="price">
                                                     <span>₹36.00</span>
                                                 </div>
-                                                <a href="meeting-details.html"><img src="assets/images/disc.jpg"
+                                                <a href="meeting-details.html"><img src="../assets/images/disc.jpg"
                                                         alt="New Lecturer Meeting"></a>
                                             </div>
                                             <div class="down-content">
@@ -296,7 +296,7 @@
                                                 <div class="price">
                                                     <span>₹36.00</span>
                                                 </div>
-                                                <a href="meeting-details.html"><img src="assets/images/disc.jpg"
+                                                <a href="meeting-details.html"><img src="../assets/images/disc.jpg"
                                                         alt="New Lecturer Meeting"></a>
                                             </div>
                                             <div class="down-content">
@@ -319,7 +319,7 @@
                                                 <div class="price">
                                                     <span>₹36.00</span>
                                                 </div>
-                                                <a href="meeting-details.html"><img src="assets/images/disc.jpg"
+                                                <a href="meeting-details.html"><img src="../assets/images/disc.jpg"
                                                         alt="New Lecturer Meeting"></a>
                                             </div>
                                             <div class="down-content">
@@ -360,17 +360,17 @@
 
 
 
-                    <script src="vendor/jquery/jquery.min.js"></script>
-                    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+                    <script src="../vendor/jquery/jquery.min.js"></script>
+                    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-                    <script src="assets/js/isotope.min.js"></script>
-                    <script src="assets/js/owl-carousel.js"></script>
-                    <script src="assets/js/lightbox.js"></script>
-                    <script src="assets/js/tabs.js"></script>
-                    <script src="assets/js/isotope.js"></script>
-                    <script src="assets/js/video.js"></script>
-                    <script src="assets/js/slick-slider.js"></script>
-                    <script src="assets/js/custom.js"></script>
+                    <script src="../assets/js/isotope.min.js"></script>
+                    <script src="../assets/js/owl-carousel.js"></script>
+                    <script src="../assets/js/lightbox.js"></script>
+                    <script src="../assets/js/tabs.js"></script>
+                    <script src="../assets/js/isotope.js"></script>
+                    <script src="../assets/js/video.js"></script>
+                    <script src="../assets/js/slick-slider.js"></script>
+                    <script src="../assets/js/custom.js"></script>
                     <script>
                         //according to loftblog tut
                         $('.nav li:first').addClass('active');
