Integrated Google charts

--- a/FrontEnd/Laxman/Agroget_FrontEnd/Renter Profile/ProfileMyEquipment.html
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/Renter Profile/ProfileMyEquipment.html
@@ -164,7 +164,7 @@
                             <div class="col-lg-4">
                                 <div class="d-sm-flex align-items-sm-start justify-content-sm-between">
                                     <div class="status">Status : Booked</div>
-                                    <div class="btn btn-primary text-uppercase">Edit Details</div>
+                                    <div class="btn btn-primary text-uppercase"> <a href=""> Edit Details</a></div>
                                 </div>
                                 
                             </div>
