--- a/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/ProfileEdit.html
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/ProfileEdit.html
@@ -96,13 +96,13 @@
                                     <div class="link-desc">Change your profile details & password</div>
                                 </div>
                             </a> </li>
-                        <li> <a href="../contact.html" class="text-decoration-none d-flex align-items-start">
-                                <div class="fas fa-headset pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">Help & Support</div>
-                                    <div class="link-desc">Contact Us for help and support</div>
-                                </div>
-                            </a> </li>
+                            <li> <a href="../index.html" class="text-decoration-none d-flex align-items-start">
+                              <div class="fas fa-headset pt-2 me-3"></div>
+                              <div class="d-flex flex-column">
+                                  <div class="link">Log Out</div>
+                                  <div class="link-desc"></div>
+                              </div>
+                          </a> </li>
                     </ul>
                 </div>
             </div>
