--- a/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/order.html
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/order.html
@@ -129,7 +129,7 @@
                                         <form id="contact" action="" method="post">
                                             <div class="row">
                                                 <div class="col-lg-12 ">
-                                                    <h2>Order Details</h2>
+                                                    <h2 style="text-align-last: center;">Order Details</h2>
                                                 </div>
 
 
@@ -140,27 +140,38 @@
                                                             <h5> Equipment Name :</h5>
                                                         </div>
                                                         <div class="col-lg-3">
-                                                            <h6><Span>use this to show name</Span></h6>
+                                                            <h5><Span>use this to show name</Span></h5>
                                                         </div>
                                                     </div>
-                                                    <br><br>
+                                                    <br>
                                                     <div class="row">
 
                                                         <div class="col-lg-9">
                                                             <h5> Equipment Type :</h5>
                                                         </div>
                                                         <div class="col-lg-3">
-                                                            <h6><Span>use this to show type</Span></h6>
+                                                            <h5><Span>use this to show type</Span></h5>
                                                         </div>
                                                     </div>
-                                                    <br><br>
+                                                    <br>
+
                                                     <div class="row">
 
                                                         <div class="col-lg-9">
                                                             <h5> Owner's Name : </h5>
                                                         </div>
                                                         <div class="col-lg-3">
-                                                            <h6><Span>use this to show owner's name</Span></h6>
+                                                            <h5><Span>use this to show owner's name</Span></h5>
+                                                        </div>
+                                                    </div>
+                                                    <br>
+                                                    <div class="row">
+
+                                                        <div >
+                                                            <h5> Description</h5>
+                                                        </div>
+                                                        <div >
+                                                            <h6><Span>use this to show Description</Span></h6>
                                                         </div>
                                                     </div>
                                                 </div>
