Created Edit Equipment Details page

--- a/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/order.html
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/Farmer Profile/order.html
@@ -72,49 +72,49 @@
         <div class="row">
             <div class="col-lg-3 my-lg-0 my-md-1">
                 <div class="affix">
-                <div id="sidebar" class="bg-purple">
-                    <div class="h4 text-white">Account</div>
-                    <ul>
-                        <li class="active"> <a href="ProfileSearch.html"
-                                class="text-decoration-none d-flex align-items-start">
-                                <div class="far fa-address-book pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">Search Equipment</div>
-                                    <div class="link-desc">search and rent equipment</div>
-                                </div>
-                            </a> </li>
-                        <li> <a href="Profile.html" class="text-decoration-none d-flex align-items-start">
-                                <div class="fas fa-box pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">My Account</div>
-                                    <div class="link-desc">View Your Details</div>
-                                </div>
-                            </a> </li>
-                        <li> <a href="ProfileMyOrders.html" class="text-decoration-none d-flex align-items-start">
-                                <div class="fas fa-box-open pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">My Bookings</div>
-                                    <div class="link-desc">View & Manage Bookings </div>
-                                </div>
-                            </a> </li>
+                    <div id="sidebar" class="bg-purple">
+                        <div class="h4 text-white">Account</div>
+                        <ul>
+                            <li class="active"> <a href="ProfileSearch.html"
+                                    class="text-decoration-none d-flex align-items-start">
+                                    <div class="far fa-address-book pt-2 me-3"></div>
+                                    <div class="d-flex flex-column">
+                                        <div class="link">Search Equipment</div>
+                                        <div class="link-desc">search and rent equipment</div>
+                                    </div>
+                                </a> </li>
+                            <li> <a href="Profile.html" class="text-decoration-none d-flex align-items-start">
+                                    <div class="fas fa-box pt-2 me-3"></div>
+                                    <div class="d-flex flex-column">
+                                        <div class="link">My Account</div>
+                                        <div class="link-desc">View Your Details</div>
+                                    </div>
+                                </a> </li>
+                            <li> <a href="ProfileMyOrders.html" class="text-decoration-none d-flex align-items-start">
+                                    <div class="fas fa-box-open pt-2 me-3"></div>
+                                    <div class="d-flex flex-column">
+                                        <div class="link">My Bookings</div>
+                                        <div class="link-desc">View & Manage Bookings </div>
+                                    </div>
+                                </a> </li>
 
-                        <li> <a href="ProfileEdit.html" class="text-decoration-none d-flex align-items-start">
-                                <div class="far fa-user pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">Edit Profile</div>
-                                    <div class="link-desc">Change your profile details & password</div>
-                                </div>
-                            </a> </li>
-                        <li> <a href="../index.html" class="text-decoration-none d-flex align-items-start">
-                                <div class="fas fa-headset pt-2 me-3"></div>
-                                <div class="d-flex flex-column">
-                                    <div class="link">Log Out</div>
-                                    <div class="link-desc"></div>
-                                </div>
-                            </a> </li>
-                    </ul>
+                            <li> <a href="ProfileEdit.html" class="text-decoration-none d-flex align-items-start">
+                                    <div class="far fa-user pt-2 me-3"></div>
+                                    <div class="d-flex flex-column">
+                                        <div class="link">Edit Profile</div>
+                                        <div class="link-desc">Change your profile details & password</div>
+                                    </div>
+                                </a> </li>
+                            <li> <a href="../index.html" class="text-decoration-none d-flex align-items-start">
+                                    <div class="fas fa-headset pt-2 me-3"></div>
+                                    <div class="d-flex flex-column">
+                                        <div class="link">Log Out</div>
+                                        <div class="link-desc"></div>
+                                    </div>
+                                </a> </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="col-lg-9 my-lg-0 my-1 ">
 
@@ -153,27 +153,11 @@
                                                             <h5><Span>use this to show type</Span></h5>
                                                         </div>
                                                     </div>
-                                                    <br>
 
-                                                    <div class="row">
 
-                                                        <div class="col-lg-9">
-                                                            <h5> Owner's Name : </h5>
-                                                        </div>
-                                                        <div class="col-lg-3">
-                                                            <h5><Span>use this to show owner's name</Span></h5>
-                                                        </div>
-                                                    </div>
-                                                    <br>
-                                                    <div class="row">
 
-                                                        <div >
-                                                            <h5> Description</h5>
-                                                        </div>
-                                                        <div >
-                                                            <h6><Span>use this to show Description</Span></h6>
-                                                        </div>
-                                                    </div>
+
+
                                                 </div>
 
 
@@ -234,12 +218,12 @@
 
 
 
-                                               
+
                                                 <div class="col-9 greycolor">
                                                     <br>
                                                     <h5> Order Total :</h5> <br>
                                                 </div>
-                                                
+
                                                 <div class="col-3 greycolor">
                                                     <br>
                                                     <h5>₹<Span>cost</Span></h5> <br>
@@ -347,6 +331,25 @@
                 $(window).scroll(function () {
                     checkSection();
                 });
+
+
+
+                var today = new Date();
+                var dd = today.getDate();
+                var mm = today.getMonth() + 1; //January is 0!
+                var yyyy = today.getFullYear();
+
+                if (dd < 10) {
+                    dd = '0' + dd;
+                }
+
+                if (mm < 10) {
+                    mm = '0' + mm;
+                }
+
+                today = yyyy + '-' + mm + '-' + dd;
+                document.getElementById("fdate").setAttribute("min", today);
+                document.getElementById("tdate").setAttribute("min", today);
             </script>
 </body>
 
